Spacing fix

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 /* Header */
 header {
-    padding: 6rem 7.5rem;
+    padding: 3.75rem 7.5rem;
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -272,6 +272,7 @@ header {
     color: #FFF;
     font-size: 1.5rem;
     font-weight: 700;
+    margin-bottom: 0.25rem;
 }
 
 .footer-container p {
